<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/group1" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_48dp"
            android:title="@string/section_init" />
        <item
            android:id="@+id/nav_station_police"
            android:icon="@drawable/ic_police_station_48dp"
            android:title="@string/section_police_stations" />
        <item
            android:id="@+id/nav_report_police"
            android:icon="@drawable/ic_police_report_48dp"
            android:title="@string/section_police_report" />
        <item
            android:id="@+id/nav_wanted"
            android:icon="@drawable/ic_wanted_48dp"
            android:title="@string/section_wanted" />

        <item
            android:id="@+id/nav_missing"
            android:icon="@drawable/ic_missing_48dp"
            android:title="@string/section_missing" />
    </group>

    <group android:id="@+id/group2" >
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_info_outline_black_24dp"
            android:title="@string/about" />
    </group>

</menu>
