<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/my_linear"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/my_scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context="one.bruino.minsegapp.ui.SignUp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_form"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp">

                <EditText
                    android:id="@+id/editTextName"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:inputType="textPersonName"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_lastName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp">

                <EditText
                    android:id="@+id/editTextLastName"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/last_name"
                    android:inputType="textPersonName"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_ssn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp">

                <EditText
                    android:id="@+id/editTextSsn"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ssn"
                    android:inputType="textPersonName|numberSigned"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_nacionality"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp">

                <EditText
                    android:id="@+id/editTextNacionality"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nationality"
                    android:inputType="textPersonName"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_margin="2dp"
                android:text="@string/birthday" />

            <Button
                android:id="@+id/btnBirthday"
                style="@style/Base.TextAppearance.AppCompat.Widget.Button.Inverse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/birthday_hint_button" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_father_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp">

                <EditText
                    android:id="@+id/editTextFatherName"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/father_name"
                    android:inputType="textPersonName"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_mother_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp">

                <EditText
                    android:id="@+id/editTextMotherName"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/mother_name"
                    android:inputType="textPersonName"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_address"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp">

                <EditText
                    android:id="@+id/editTextAddress"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/incidentAddress"
                    android:inputType="textPersonName"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <fr.ganfra.materialspinner.MaterialSpinner
                android:id="@+id/spinnerMarginalStatus"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                app:ms_enableErrorLabel="false"
                app:ms_enableFloatingLabel="true"
                app:ms_floatingLabelText="@string/marital_status"
                app:ms_hint="@string/marital_status"
                app:ms_multiline="false" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_phone"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp">

                <EditText
                    android:id="@+id/editTextPhone"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone"
                    android:inputType="phone|numberSigned"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp">

                <EditText
                    android:id="@+id/editTextEmail"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_occupation"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp">

                <EditText
                    android:id="@+id/editTextOccupation"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/occupation"
                    android:inputType="textPersonName"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/buttonSendRegister"
                style="@style/Base.TextAppearance.AppCompat.Widget.Button.Inverse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/send_register_data" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>