<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.keniobyte.bruino.minsegapp.ui.SignUpValidationActivity">

    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textViewValidation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/validation"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textViewInputValidation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/input_validation" />

    <EditText
        android:id="@+id/editTextValidation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:ems="10"
        android:inputType="textCapCharacters" />

    <Button
        android:id="@+id/buttonConfirmed"
        style="@style/Base.TextAppearance.AppCompat.Widget.Button.Inverse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirmation" />
</LinearLayout>
