<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <include
        android:id="@+id/myToolbar"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/namePerpetratorEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/perpetrator_name"
                android:inputType="textCapWords|textPersonName"
                android:maxLines="1"
                android:padding="@dimen/activity_vertical_margin" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    style="@style/Widget.AppCompat.ImageButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="@null"
                    android:contentDescription="@string/date_report_police"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:src="@drawable/ic_event_grey_600_24dp" />

                <Button
                    android:id="@+id/datetimeButton"
                    style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/time" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/gray" />

            <EditText
                android:id="@+id/descriptionEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/description"
                android:inputType="textCapSentences|textMultiLine"
                android:padding="@dimen/activity_vertical_margin" />

            <com.keniobyte.bruino.minsegapp.ui.NestedListView
                android:id="@+id/attachmentsListView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@null"
                android:scrollbars="none" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>