<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:orientation="vertical"
    tools:context="com.keniobyte.bruino.minsegapp.ui.LoginActivity">

    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnLogin"
        style="@style/Base.TextAppearance.AppCompat.Widget.Button.Inverse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center"
        android:text="@string/login_button" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_ssn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnLogin"
        android:layout_centerHorizontal="true">

        <EditText
            android:id="@+id/editTextSsn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/btnLogin"
            android:layout_alignEnd="@+id/buttonSignUP"
            android:layout_alignLeft="@+id/buttonSignUP"
            android:layout_alignRight="@+id/buttonSignUP"
            android:layout_alignStart="@+id/buttonSignUP"
            android:layout_gravity="center"
            android:ems="10"
            android:hint="@string/login_ssn"
            android:inputType="number" />
    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/buttonSignUP"
        style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/sign_up" />


</RelativeLayout>
